--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -47,7 +47,7 @@
             <ImageView
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/big_image_height"
+                android:layout_height="@dimen/image_height_big"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/movie_poster"
                 android:scaleType="centerCrop"
@@ -58,8 +58,8 @@
 
             <ImageView
                 android:id="@+id/poster"
-                android:layout_width="@dimen/image_width"
-                android:layout_height="@dimen/image_height"
+                android:layout_width="@dimen/image_width_small"
+                android:layout_height="@dimen/image_height_small"
                 android:layout_marginLeft="@dimen/fab_margin"
                 android:layout_marginStart="@dimen/fab_margin"
                 android:layout_marginTop="@dimen/top_margin"
