--- a/app/src/main/res/layout/item_movie_poster.xml
+++ b/app/src/main/res/layout/item_movie_poster.xml
@@ -24,27 +24,11 @@
   -->
 
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <data>
-
-    </data>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/bottom_margin"
-        android:layout_marginLeft="@dimen/left_magin"
-        android:layout_marginRight="@dimen/right_margin"
-        android:layout_marginTop="@dimen/top_margin"
-        android:layout_marginStart="@dimen/left_magin"
-        android:layout_marginEnd="@dimen/right_margin">
-
-        <ImageView
-            android:id="@+id/poster"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:contentDescription="@string/movie_poster" />
-    </android.support.v7.widget.CardView>
+    <ImageView
+        android:id="@+id/poster"
+        android:layout_width="@dimen/image_height_big"
+        android:layout_height="@dimen/image_height_big"
+        android:adjustViewBounds="true"
+        android:contentDescription="@string/movie_poster"
+        android:scaleType="centerCrop" />
 </layout>
