--- a/app/src/main/res/layout/item_movie_poster.xml
+++ b/app/src/main/res/layout/item_movie_poster.xml
@@ -26,6 +26,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:id="@+id/poster"
+        android:transitionName="@string/movie_poster"
         android:layout_width="@dimen/image_height_big"
         android:layout_height="@dimen/image_height_big"
         android:adjustViewBounds="true"
